# DropOS-DropShipping

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/analytics/: router.py  schemas.py  service.py
backend/app/api_keys/: models.py  router.py  schemas.py  service.py
backend/app/audit_log/: models.py  router.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/billing/: router.py  schemas.py  service.py
backend/app/common/: exceptions.py  middleware.py  models.py  pagination.py  security.py
backend/app/jobs/: router.py
backend/app/notifications/: models.py  router.py  schemas.py  service.py
backend/app/orders/: cost_calculator.py  models.py  refund_models.py  router.py  schemas.py  service.py
backend/app/products/: models.py  router.py  schemas.py  service.py
backend/app/purchase_orders/: models.py  router.py  schemas.py  service.py
backend/app/returns/: models.py  router.py  schemas.py  service.py
backend/app/stores/: models.py  router.py  schemas.py  service.py  shopify_fulfillment.py  shopify_oauth.py  shopify_sync.py
backend/app/suppliers/: models.py  router.py  schemas.py  service.py
backend/app/tariffs/: models.py  router.py  schemas.py  service.py
backend/app/team/: models.py  router.py  schemas.py  service.py
backend/app/webhooks/: handler.py  models.py  router.py  verifier.py
backend/app/worker/: jobs.py  settings.py
backend/migrations/: env.py
docs/: architecture.md
(+84 files in other folders)
